Fixes #3